delete duplicated codes and replace them by an include file

--- a/_pages/fr/code-source-ouvert-schema.html
+++ b/_pages/fr/code-source-ouvert-schema.html
@@ -13,282 +13,4 @@ permalink: /fr/code-source-ouvert-schema.html
 <p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
 <p>Nous avons créé un <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
 
-<ul class="list-unstyled">
-    <li>
-    <details open> 
-        <summary>schemaVersion <span class="bg-primary">obligatoire</span> [string]</summary>
-        <p>La version du schéma de données ORE pour le code utilisé.</p>
-    </details> 
-    </li>  
-    
-    <li>
-    <details open> 
-        <summary>adminCode <span class="bg-primary">obligatoire</span> [string]</summary>
-        <p>Le code d'administration - https://github.com/canada-ca/ore-ero/blob/master/_data/administrations</p>
-    </details> 
-    </li>  
-    
-    <li>
-    <details open>   
-        <summary>releases <span class="bg-primary">obligatoire</span> [array]</summary>
-        <p>Contient des objets représentant chaque version de code source mise à disposition.</p>            
-        <ul class="list-unstyled">
-            <li>
-            <details open> 
-                <summary>contact <span class="bg-primary">obligatoire</span> [array]</summary>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>Un URL anglais et français pouvant etre utilisé pour atteindre le contact</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>email <span class="bg-primary">obligatoire</span> [string]</summary>
-                        <p>L'adresse courriel pour contacter la "release"</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [string]</summary>
-                        <p>Le nom d'un contact ou d'un département pour la "release".</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>phone [string]</summary>
-                        <p>Le numéro de téléphone pour contacter une "release".</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>date <span class="bg-primary">obligatoire</span> [array]</summary>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>created <span class="bg-primary">obligatoire</span> [string]</summary>
-                        <p>La date de la "release" lorsqu'elle a été crée, au format AAAA-MM-JJ ou ISO 8601.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>lastModified [string]</summary>
-                        <p>La date de la "release" lorsqu'elle a été modifiée, au format AAAa-MM-JJ ou ISO 8601.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>metadataLastUpdated <span class="bg-primary">obligatoire</span> [string]</summary>
-                        <p>La date de la dernière fois les "metadata" ont été mises à jour, au format AAAA-MM-JJ ou ISO 8601.</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>description <span class="bg-primary">obligatoire</span> [array]</summary>
-                <p>Description anglaise et française du "release"</p>
-                <ul>
-                    <li>en <span class="bg-primary">obligatoire</span> [string]</li>
-                    <li>fr <span class="bg-primary">obligatoire</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>downloadURL [array]</summary>
-                <p>L'URL où une distribution de la "release" peut être trouvée.</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>homepageURL [array]</summary>
-                <p>L'URL de la page d'accueil de "release" publique.</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>languages [array]</summary>
-                <p>Une liste de chaîne avec les noms de langages de programmation utilisés dans la version. [lang1, lang2]</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>name <span class="bg-primary">obligatoire</span> [array]</summary>
-                <p>Le nom de la "release" en anglais et français.</p>
-                <ul>
-                    <li>en <span class="bg-primary">obligatoire</span> [string]</li>
-                    <li>fr <span class="bg-primary">obligatoire</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>organization [array]</summary>
-                <p>L'organization ou la composante du département de l'agence à laquelle la release appartient. Par exemple, "CDS" ou "Gouvernement ouvert".</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>Partners [array]</summary>
-                <p>Un tableau d'objets comprenant un acronyme pour chaque agence partenaire de la "release" et l'adresse courriel de cette agence.</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>L'URL d'un site Web qui peut être utilisé pour atteindre le partenaire.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>email [string]</summary>
-                        <p>L'adresse courriel du contact du partenaire.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [string]</summary>
-                        <p>Nom anglais et français du partenaire.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>licenses <span class="bg-primary">obligatoire</span> [array]</summary>
-                <p>Un ensemble d'objet contenant les détails de la license.</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL <span class="bg-primary">obligatoire</span> [array]</summary>
-                        <p>L'URL de la license de "release"</p>
-                        <ul>
-                            <li>en <span class="bg-primary">obligatoire</span> [string]</li>
-                            <li>fr <span class="bg-primary">obligatoire</span> [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>spdxID <span class="bg-primary">obligatoire</span> [string]</summary>
-                        <p>Identifiant de licence SPDX - https://spdx.org/licenses/</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>repositoryURL <span class="bg-primary">obligatoire</span> [array]</summary>
-                <p>L'URL du répertoire de la "release" publique pour les répertoires sources ouverts.</p>
-                <ul>
-                    <li>en <span class="bg-primary">obligatoire</span> [string]</li>
-                    <li>fr <span class="bg-primary">obligatoire</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>relatedCode [array]</summary>
-                <p>Un ensemble de code source, de bibliothèques, de frameworks, d'API, de plateformes ou d'autres logiciels utilisés dans cette "release".</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>L'URL où le logiciel peut être trouvé.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [arrray]</summary>
-                        <p>Le nom anglais et français du logiciel utilisé dans cette "release".</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>status [string]</summary>
-                <p>Le statut de développement de la version. Par exemple, Production, Beta, ..</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>tags <span class="bg-primary">obligatoire</span> [array]</summary>
-                <p>Un ensemble de mots clés qui seront utiles pour la decouverte et la recherche de la "release".</p>
-                <ul>
-                    <li>en <span class="bg-primary">obligatoire</span> [array] Une liste de mots clés en anglais</li>
-                    <li>fr <span class="bg-primary">obligatoire</span> [array] Une liste de mots clés en français</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>vcs [string]</summary>
-                <p>Une chaîne en miniscule contenant le nom de la version du système de contrôle qui est utilisée pour la "release". Par exemple, git, svn, ..</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>version [string]</summary>
-                <p>La version de cette "release". Par  exemple, 1.0.0</p>
-            </details>
-            </li>
-        </ul>
-    </details>
-    </li>
-</ul>
+{% include codeSchema.html %}
