--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -13,282 +13,4 @@ permalink: /en/open-source-code-schema.html
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
 
-<ul class="list-unstyled">
-    <li>
-    <details open> 
-        <summary>schemaVersion <span class="bg-primary">mandatory</span> [string]</summary>
-        <p>The version of the ORE metadata schema for open source code.</p>
-    </details> 
-    </li>  
-    
-    <li>
-    <details open> 
-        <summary>adminCode <span class="bg-primary">mandatory</span> [string]</summary>
-        <p>Administration code from this <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations)">data file</a></p>
-    </details>
-    </li>  
-    
-    <li>
-    <details open>   
-        <summary>releases <span class="bg-primary">mandatory</span> [array]</summary>
-        <p>Contains objects representing each project or source code available.</p>            
-        <ul class="list-unstyled">
-            <li>
-            <details open> 
-                <summary>contact <span class="bg-primary">mandatory</span> [array]</summary>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>French and English URL that can be used to reach the point of contact.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>email <span class="bg-primary">mandatory</span> [string]</summary>
-                        <p>An email address to contact the project.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [string]</summary>
-                        <p>The name of a contact or team for the project.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>phone [string]</summary>
-                        <p>The phone number to contact the project.</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>date <span class="bg-primary">mandatory</span> [array]</summary>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>created <span class="bg-primary">mandatory</span> [string]</summary>
-                        <p>The date the project was originally created, in YYYY-MM-DD or ISO 8601 format.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>lastModified [string]</summary>
-                        <p>The date the project was modified, in YYYY-MM-DD or ISO 8601 format.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>metadataLastUpdated <span class="bg-primary">mandatory</span> [string]</summary>
-                        <p>The date the metadata of the project was last updated, in YYYY-MM-DD or ISO 8601 format.</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>description <span class="bg-primary">mandatory</span> [array]</summary>
-                <p>French and English description of the project or source code.</p>
-                <ul>
-                    <li>en <span class="bg-primary">mandatory</span> [string]</li>
-                    <li>fr <span class="bg-primary">mandatory</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>downloadURL [array]</summary>
-                <p>French and English URL where a distribution of the project can be found.</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>homepageURL [array]</summary>
-                <p>French and English  URL of the project homepage.</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>languages [array]</summary>
-                <p>A list of strings with the names of the programming languages used in the project.</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>name <span class="bg-primary">mandatory</span> [array]</summary>
-                <p>French and English name of the project or source code.</p>
-                <ul>
-                    <li>en <span class="bg-primary">mandatory</span> [string]</li>
-                    <li>fr <span class="bg-primary">mandatory</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>organization [array]</summary>
-                <p>French and English name of organization or component within the department or agency to which the project belongs.</p>
-                <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>partners [array]</summary>
-                <p>An array of objects for information about groups partnering on the project.</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>French and English URL to a website that can be used to reach the partner.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>email [string]</summary>
-                        <p>The email address for the point of contact of the partner.</p>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [array]</summary>
-                        <p>French and English name of the partner.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>licenses <span class="bg-primary">mandatory</span> [array]</summary>
-                <p>An array of objects containing license details.</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL <span class="bg-primary">mandatory</span> [array]</summary>
-                        <p>French and English URL of the license.</p>
-                        <ul>
-                            <li>en <span class="bg-primary">mandatory</span> [string]</li>
-                            <li>fr <span class="bg-primary">mandatory</span> [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>spdxID <span class="bg-primary">mandatory</span> [string]</summary>
-                        <p>SPDX License identifier - https://spdx.org/licenses/</p>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>repositoryURL <span class="bg-primary">mandatory</span> [array]</summary>
-                <p>French and English URL of the public repository of the project.</p>
-                <ul>
-                    <li>en <span class="bg-primary">mandatory</span> [string]</li>
-                    <li>fr <span class="bg-primary">mandatory</span> [string]</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>relatedCode [array]</summary>
-                <p>An array of source code, libraries, frameworks, APIs, platforms or other software used in this project.</p>
-                <ul class="list-unstyled">
-                    <li>
-                    <details open>
-                        <summary>URL [array]</summary>
-                        <p>French and English URL where the software can be found.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                    <li>
-                    <details open>
-                        <summary>name [array]</summary>
-                        <p>French and English name of the software used in this project.</p>
-                        <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
-                        </ul>
-                    </details>
-                    </li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>status [string]</summary>
-                <p>The development status of the project. For example, Production, Beta, ..</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>tags <span class="bg-primary">mandatory</span> [array]</summary>
-                <p>French and English keywords that will be helpful in discovering and searching for the project.</p>
-                <ul>
-                    <li>en <span class="bg-primary">mandatory</span> [array] A list of English keywords</li>
-                    <li>fr <span class="bg-primary">mandatory</span> [array] A list of French keywords</li>
-                </ul>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>vcs [string]</summary>
-                <p>A lowercase string with the name of the version control system that is being used for the project. For example, git, svn, ..</p>
-            </details>
-            </li>
-
-            <li>
-            <details open> 
-                <summary>version [string]</summary>
-                <p>The latest version for this project. For example, 1.0.0</p>
-            </details>
-            </li>
-        </ul>
-    </details>
-    </li>
-</ul>
+{% include codeSchema.html %}
