add a schema link and a form link in open source code page

--- a/_pages/en/open-source-code.html
+++ b/_pages/en/open-source-code.html
@@ -10,4 +10,6 @@ permalink: /en/open-source-code.html
 
 <p>See the list of <a href="./open-source-code-groups.html">Open Source Code Groups</a> to find more Canadian public administrations' open source projects and code repositories.</p>
 
+<p>If you are interested to contribute with us, fill out <a href="./open-source-code-form.html">the open source code form</a>. <a href="./open-source-code-schema.html">The metadata schema</a> can also help you to validate the form.</p>
+
 {% include codeTable.html %}
