--- a/_pages/fr/code-source-ouvert.html
+++ b/_pages/fr/code-source-ouvert.html
@@ -10,4 +10,6 @@ permalink: /fr/code-source-ouvert.html
 
 <p>Vous pouvez aussi consulter la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code d'administrations publiques Canadiennes.</p>
 
+<p>Si vous êtes intéressé à contribuer avec nous, veuillez remplir <a href="./code-source-ouvert-formulaire.html">le formulaire de code source ouvert</a>. <a href="./code-source-ouvert-schema.html">Le schéma de métadonnées</a> peut également vous aider à valider le formulaire.</p>
+
 {% include codeTable.html %}
