fix errors detected by html5validator

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -9,17 +9,19 @@ permalink: /en/docs.html
 
 <h2>Directory structure</h2>
 
-<ul>
-    <li><h3>administrations</h3> List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</li>
-    <li><h3>code</h3> List of released open source code by administrations. Sub-folders contain data files. One file per administration.</li>
-    <ul>
-        <li>federal</li>
-        <li>provincial</li>    
-        <li>municipal</li>    
-    </ul>
-    <li><h3>logiciels_libres-open_source_software</h3> List of open source software used by administrations.</li>
-    <li><h3>normes_ouvertes-open_standards</h3> List open standards endorsed or used by administrations.</li>
-</ul>
+    <h3>administrations</h3> 
+      <p>List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</p>
+    <h3>code</h3> 
+      <p>List of released open source code by administrations. Sub-folders contain data files. One file per administration.</p>
+        <ul>
+            <li>federal</li>
+            <li>provincial</li>    
+            <li>municipal</li>    
+        </ul>
+    <h3>logiciels_libres-open_source_software</h3> 
+      <p>List of open source software used by administrations.</p>
+    <h3>normes_ouvertes-open_standards</h3> 
+      <p>List open standards endorsed or used by administrations.</p>
 
 <h2>How to add your data</h2>
 <h3>Adding your administration</h3>
