--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -9,17 +9,19 @@ permalink: fr/docs.html
 
 <h2>Structure du répertoire</h2>
 
-<ul>
-    <li><h3>administrations</h3> Liste des administrations fédérale, provinciales, territoriales et municipales du Canada. Utilisé pour rechercher les noms bilingues.</li>
-    <li><h3>code</h3> Liste des codes sources ouverts publiés par les administrations. Les sous-répertoire contiennent les fichiers de données. Un fichier par administration.</li>
-    <ul>
-        <li>federal</li>
-        <li>provincial</li>    
-        <li>municipal</li>    
-    </ul>
-    <li><h3>logiciels_libres-open_source_software</h3> Liste des logiciels libres utilisés par les administrations.</li>
-    <li><h3>normes_ouvertes-open_standards</h3> Liste des normes ouvertes approuvées ou utilisées par les administrations.</li>
-</ul>
+   <h3>administrations</h3> 
+    <p>Liste des administrations fédérale, provinciales, territoriales et municipales du Canada. Utilisé pour rechercher les noms bilingues.</p>
+   <h3>code</h3>
+    <p>Liste des codes sources ouverts publiés par les administrations. Les sous-répertoire contiennent les fichiers de données. Un fichier par administration.</p>
+      <ul>
+          <li>federal</li>
+          <li>provincial</li>    
+          <li>municipal</li>    
+      </ul>
+   <h3>logiciels_libres-open_source_software</h3>
+    <p>Liste des logiciels libres utilisés par les administrations.</p>
+   <h3>normes_ouvertes-open_standards</h3> 
+    <p>Liste des normes ouvertes approuvées ou utilisées par les administrations.</p>
 
 <h2>Comment ajouter vos données</h2>
 <h3>Ajouter votre administration</h3>
