--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -6,23 +6,53 @@ permalink: /en/docs.html
 ---
 
 <h1 property="name" id="wb-cont">Documentation</h1>
+<div class="jumbotron">
+  <p>Table Of Contents</p>
+  <ul>
+    <li><a href="#directory_structure">1 Directory structure</a>
+      <ul>
+        <li><a href="#administrations">1.1 Administrations</a></li>
+        <li><a href="#code">1.2 Code</a></li>
+        <li><a href="#logiciels_libres-open_source_software">1.3 Logiciels_libres-open_source_software</a></li>
+        <li><a href="#normes_ouvertes-open_standards">1.4 Normes_ouvertes-open_standards</a></li>
+      </ul>
+    </li>
+    <li><a href="#how_to_add_your_data">2 How to add your data</a>
+      <ul>
+        <li><a href="#adding_your_administration">2.1 Adding your administration</a></li>
+        <li><a href="#adding_open_source_code">2.2 adding_open_source_code</a>
+          <ul>
+            <li><a href="#your_administration_is_already_there">2.2.1 Your administration is already there</a></li>
+            <li><a href="#your_administration_needs_to_be_added">2.2.2 Your administration needs to be added</a>
+          </ul>
+        </li>
+        <li><a href="#adding_open_source_software">2.3 Adding Open Source Software</a>
+          <ul>
+            <li><a href="#the_software_is_already_there">2.3.1 The software is already there</a></li>
+            <li><a href="#your_open_source_software_needs_to_be_added">2.3.2 Your open source software needs to be added</a>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
 
-<h2>Directory structure</h2>
+<h2 id="directory_structure">Directory structure</h2>
 
 <ul>
-    <li><h3>administrations</h3> List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</li>
-    <li><h3>code</h3> List of released open source code by administrations. Sub-folders contain data files. One file per administration.</li>
+    <li><h3 id="administrations">administrations</h3> List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</li>
+    <li><h3 id="code">code</h3> List of released open source code by administrations. Sub-folders contain data files. One file per administration.</li>
     <ul>
         <li>federal</li>
         <li>provincial</li>    
         <li>municipal</li>    
     </ul>
-    <li><h3>logiciels_libres-open_source_software</h3> List of open source software used by administrations.</li>
-    <li><h3>normes_ouvertes-open_standards</h3> List open standards endorsed or used by administrations.</li>
+    <li><h3 id="logiciels_libres-open_source_software">logiciels_libres-open_source_software</h3> List of open source software used by administrations.</li>
+    <li><h3 id="normes_ouvertes-open_standards">normes_ouvertes-open_standards</h3> List open standards endorsed or used by administrations.</li>
 </ul>
 
-<h2>How to add your data</h2>
-<h3>Adding your administration</h3>
+<h2 id="how_to_add_your_data">How to add your data</h2>
+<h3 id="adding_your_administration">Adding your administration</h3>
 <p>
     In the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">administrations</a> directory add your adminstration in the 
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>, 
@@ -30,8 +60,8 @@ permalink: /en/docs.html
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a> file.
 </p>
 
-<h3>Adding Open Source Code</h3>
-<h4>Your administration is already there:</h4>
+<h3 id="adding_open_source_code">Adding Open Source Code</h3>
+<h4 id="your_administration_is_already_there">Your administration is already there:</h4>
 <p>
     If there is already a file for your adminstration under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to edit that file to add your released open source code.
 </p>
@@ -75,15 +105,15 @@ permalink: /en/docs.html
     For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
 </p>
 
-<h4>Your administration needs to be added:</h4>
+<h4 id="your_administration_needs_to_be_added">Your administration needs to be added:</h4>
 <p>
     If your adminstration doesn't have a file under the 
     <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to create a new file for your administration. Use the 
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/code_mandatory.yml">code template with only mandatory fields</a>.
 </p>
 
-<h3>Adding Open Source Software</h3>
-<h4>The software is already there</h4>
+<h3 id="adding_open_source_software">Adding Open Source Software</h3>
+<h4 id="the_software_is_already_there">The software is already there</h4>
 <p>
     If there is already a file for the open source software you are using under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
     you need to check if your adminstration is already listed as using the open source software.
@@ -132,7 +162,7 @@ permalink: /en/docs.html
     For more informations, click <a href="./open-source-software-schema.html">here</a> to see the Metadata Schema for Open Source Software.
 </p>
 
-<h4>Your open source software needs to be added</h4>
+<h4 id="your_open_source_software_needs_to_be_added">Your open source software needs to be added</h4>
 <p>
     If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
     you need to create a new file for the open source software. Use the <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
