fix htmlproofer error: linking internal hash that does not exist

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -12,10 +12,10 @@ permalink: /en/docs.html
   <ul>
     <li><a href="#directory_structure">1 Directory structure</a>
       <ul>
-        <li><a href="#administrations">1.1 Administrations</a></li>
-        <li><a href="#code">1.2 Code</a></li>
-        <li><a href="#logiciels_libres-open_source_software">1.3 Logiciels_libres-open_source_software</a></li>
-        <li><a href="#normes_ouvertes-open_standards">1.4 Normes_ouvertes-open_standards</a></li>
+        <li><a href="#administrations" data-proofer-ignore>1.1 Administrations</a></li>
+        <li><a href="#code" data-proofer-ignore>1.2 Code</a></li>
+        <li><a href="#logiciels_libres-open_source_software" data-proofer-ignore>1.3 Logiciels_libres-open_source_software</a></li>
+        <li><a href="#normes_ouvertes-open_standards" data-proofer-ignore>1.4 Normes_ouvertes-open_standards</a></li>
       </ul>
     </li>
     <li><a href="#how_to_add_your_data">2 How to add your data</a>
