--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -4,57 +4,60 @@ ref: Docs
 lang: en
 permalink: /en/docs.html
 ---
+ <h1 property="name" id="wb-cont">Documentation</h1>
 
-<h1 property="name" id="wb-cont">Documentation</h1>
-
-<div class="jumbotron">
-  <p>Table Of Contents</p>
-  <ul>
-    <li><a href="#directory_structure">1 Directory structure</a>
-      <ul>
-        <li><a href="#administrations" data-proofer-ignore>1.1 Administrations</a></li>
-        <li><a href="#code" data-proofer-ignore>1.2 Code</a></li>
-        <li><a href="#logiciels_libres-open_source_software" data-proofer-ignore>1.3 Logiciels_libres-open_source_software</a></li>
-        <li><a href="#normes_ouvertes-open_standards" data-proofer-ignore>1.4 Normes_ouvertes-open_standards</a></li>
-      </ul>
-    </li>
-    <li><a href="#how_to_add_your_data">2 How to add your data</a>
-      <ul>
-        <li><a href="#adding_your_administration">2.1 Adding your administration</a></li>
-        <li><a href="#adding_open_source_code">2.2 adding_open_source_code</a>
-          <ul>
-            <li><a href="#your_administration_is_already_there">2.2.1 Your administration is already there</a></li>
-            <li><a href="#your_administration_needs_to_be_added">2.2.2 Your administration needs to be added</a>
+  <div class="row">
+    <nav role="navigation" class="col-md-12">
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h2 class="panel-title">Table of contents</h2>
+        </header>
+        <div class="panel-body">
+          <ul class="list-unstyled">
+            <li><a href="#directory_structure"> Directory structure</a>
+              <ul>
+                  <li><a href="#administrations"> Administrations</a></li>
+                  <li><a href="#code"> Code</a></li>
+                  <li><a href="#logiciels_libres-open_source_software"> Logiciels_libres-open_source_software</a></li>
+                  <li><a href="#normes_ouvertes-open_standards"> Normes_ouvertes-open_standards</a></li>
+              </ul>
+           <li><a href="#how_to_add_your_data"> How to add your data</a>
+              <ul>
+                  <li><a href="#adding_your_administration">Adding your administration</a></li>
+                  <li><a href="#adding_open_source_code"> Adding_open_source_code</a>
+                      <ul>
+                          <li><a href="#your_administration_is_already_there"> Your administration is already there</a></li>
+                          <li><a href="#your_administration_needs_to_be_added"> Your administration needs to be added</a>
+                      </ul>
+                  </li>
+                  <li><a href="#adding_open_source_software"> Adding Open Source Software</a>
+                      <ul>
+                          <li><a href="#the_software_is_already_there"> The software is already there</a></li>
+                          <li><a href="#your_open_source_software_needs_to_be_added"> Your open source software needs to be added</a>
+                      </ul>
+                  </li>
+              </ul>
+            </li>
           </ul>
-        </li>
-        <li><a href="#adding_open_source_software">2.3 Adding Open Source Software</a>
-          <ul>
-            <li><a href="#the_software_is_already_there">2.3.1 The software is already there</a></li>
-            <li><a href="#your_open_source_software_needs_to_be_added">2.3.2 Your open source software needs to be added</a>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
+        </div>
+      </div>
+    </nav>
+  </div>
+  
 <h2 id="directory_structure">Directory structure</h2>
 
-
-
-
-    <h3>administrations</h3> 
+    <h3 id="administrations">Administrations</h3> 
       <p>List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</p>
-    <h3>code</h3> 
+    <h3 id="code">Code</h3> 
       <p>List of released open source code by administrations. Sub-folders contain data files. One file per administration.</p>
         <ul>
-            <li>federal</li>
-            <li>provincial</li>    
-            <li>municipal</li>    
+            <li>Federal</li>
+            <li>Provincial</li>    
+            <li>Municipal</li>    
         </ul>
-    <h3>logiciels_libres-open_source_software</h3> 
+    <h3 id="logiciels_libres-open_source_software">Logiciels_libres-open_source_software</h3> 
       <p>List of open source software used by administrations.</p>
-    <h3>normes_ouvertes-open_standards</h3> 
+    <h3 id="normes_ouvertes-open_standards">Normes_ouvertes-open_standards</h3> 
       <p>List open standards endorsed or used by administrations.</p>
 
 <h2 id="how_to_add_your_data">How to add your data</h2>
@@ -108,7 +111,8 @@ permalink: /en/docs.html
 </pre>
 
 <p>
-    For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
+    For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code. 
+    If you are interested to contribute with us, fill out <a href="./open-source-code-form.html">the open source code form</a>.
 </p>
 
 <h4 id="your_administration_needs_to_be_added">Your administration needs to be added:</h4>
