--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -7,24 +7,62 @@ permalink: fr/docs.html
 
 <h1 property="name" id="wb-cont">Documentation</h1>
 
-<h2>Structure du répertoire</h2>
+<div class="row">
+    <nav role="navigation" class="col-md-12">
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h2 class="panel-title">Table des matières</h2>
+        </header>
+        <div class="panel-body">
+          <ul class="list-unstyled">
+            <li><a href="#Structure du répertoire"> Structure du répertoire</a>
+              <ul>
+                  <li><a href="#administrations"> Administrations</a></li>
+                  <li><a href="#code"> Code</a></li>
+                  <li><a href="#logiciels_libres-open_source_software"> Logiciels_libres-open_source_software</a></li>
+                  <li><a href="#normes_ouvertes-open_standards"> Normes_ouvertes-open_standards</a></li>
+              </ul>
+           <li><a href="#Comment ajouter vos données"> Comment ajouter vos données</a>
+              <ul>
+                  <li><a href="#Ajouter votre administration">Ajouter votre administration</a></li>
+                  <li><a href="#Ajout de codes Open Source"> Ajout de codes Open Source</a>
+                      <ul>
+                          <li><a href="#Votre administration est déjà là"> Votre administration est déjà là</a></li>
+                          <li><a href="#Votre administration doit être ajouté"> Votre administration doit être ajouté</a>
+                      </ul>
+                  </li>
+                  <li><a href="#Ajout de logiciels Open Source"> Ajout de logiciels Open Source</a>
+                      <ul>
+                          <li><a href="#Le logiciel est déjà là"> Le logiciel est déjà là</a></li>
+                          <li><a href="#Votre logiciel open source doit être ajouté"> Votre logiciel open source doit être ajouté</a>
+                      </ul>
+                  </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
-   <h3>administrations</h3> 
+<h2 id="Structure du répertoire">Structure du répertoire</h2>
+
+   <h3 id="administrations">Administrations</h3> 
     <p>Liste des administrations fédérale, provinciales, territoriales et municipales du Canada. Utilisé pour rechercher les noms bilingues.</p>
-   <h3>code</h3>
+   <h3 id="code">Code</h3>
     <p>Liste des codes sources ouverts publiés par les administrations. Les sous-répertoire contiennent les fichiers de données. Un fichier par administration.</p>
       <ul>
           <li>federal</li>
           <li>provincial</li>    
           <li>municipal</li>    
       </ul>
-   <h3>logiciels_libres-open_source_software</h3>
+   <h3 id="logiciels_libres-open_source_software">Logiciels_libres-open_source_software</h3>
     <p>Liste des logiciels libres utilisés par les administrations.</p>
-   <h3>normes_ouvertes-open_standards</h3> 
+   <h3 id="normes_ouvertes-open_standards">Normes_ouvertes-open_standards</h3> 
     <p>Liste des normes ouvertes approuvées ou utilisées par les administrations.</p>
 
-<h2>Comment ajouter vos données</h2>
-<h3>Ajouter votre administration</h3>
+<h2 id="Comment ajouter vos données">Comment ajouter vos données</h2>
+<h3 id="Ajouter votre administration">Ajouter votre administration</h3>
 <p>
     Dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">administrations</a> ajouter votre administration dans le fichier 
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>, 
@@ -32,8 +70,8 @@ permalink: fr/docs.html
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a>.
 </p>
 
-<h3>Ajout de codes Open Source</h3>
-<h4>Votre administration est déjà là</h4>
+<h3 id="Ajout de codes Open Source">Ajout de codes Open Source</h3>
+<h4 id="Votre administration est déjà là">Votre administration est déjà là</h4>
 <p>
     S'il existe déjà un fichier pour votre administration sous le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> vous devez modifier ce fichier pour ajouter votre code source ouvert.
 </p>
@@ -74,18 +112,19 @@ permalink: fr/docs.html
 </pre>
 
 <p>
-    Pour plus d'informations, cliquez <a href="./code-source-ouvert-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert.
+    Pour plus d'informations, cliquez <a href="./code-source-ouvert-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert. 
+    Si vous êtes intéressé à contribuer avec nous, veuillez remplir <a href="./code-source-ouvert-formulaire.html">le formulaire de code source ouvert</a>.
 </p>
 
-<h4>Votre administration doit être ajouté:</h4>
+<h4 id="Votre administration doit être ajouté">Votre administration doit être ajouté:</h4>
 <p>
     Si votre administration n'a pas de fichier sous le répertoire  
     <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> vous devez créer un nouveau fichier pour votre administration.
     Utilisez le <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/code_mandatory.yml">modèle de code avec uniquement les champs obligatoires</a>.
 </p>
 
-<h3>Ajout de logiciels Open Source</h3>
-<h4>Le logiciel est déjà là</h4>
+<h3 id="Ajout de logiciels Open Source">Ajout de logiciels Open Source</h3>
+<h4 id="Le logiciel est déjà là">Le logiciel est déjà là</h4>
 <p>
     S'il existe déjà un fichier pour le logiciel libre que vous utilisez dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>, 
     vous devez vérifier si votre administration est déjà répertoriée comme utilisant le logiciel libre.
@@ -134,7 +173,7 @@ permalink: fr/docs.html
     Pour plus d'informations, cliquez <a href="./logiciels-libres-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert.
 </p>
 
-<h4>Votre logiciel open source doit être ajouté</h4>
+<h4 id="Votre logiciel open source doit être ajouté">Votre logiciel open source doit être ajouté</h4>
 <p>
     Si votre logiciel open source n'a pas de fichier dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>
     vous devez créer un nouveau fichier pour le logiciel open source. Utilisez le modèle <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
