fix html5validator errors

--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -15,26 +15,26 @@ permalink: fr/docs.html
         </header>
         <div class="panel-body">
           <ul class="list-unstyled">
-            <li><a href="#Structure du répertoire"> Structure du répertoire</a>
+            <li><a href="#Structure_du_repertoire"> Structure du répertoire</a>
               <ul>
                   <li><a href="#administrations"> Administrations</a></li>
                   <li><a href="#code"> Code</a></li>
                   <li><a href="#logiciels_libres-open_source_software"> Logiciels_libres-open_source_software</a></li>
                   <li><a href="#normes_ouvertes-open_standards"> Normes_ouvertes-open_standards</a></li>
               </ul>
-           <li><a href="#Comment ajouter vos données"> Comment ajouter vos données</a>
+           <li><a href="#Comment_ajouter_vos_donnees"> Comment ajouter vos données</a>
               <ul>
-                  <li><a href="#Ajouter votre administration">Ajouter votre administration</a></li>
-                  <li><a href="#Ajout de codes Open Source"> Ajout de codes Open Source</a>
+                  <li><a href="#Ajouter_votre_administration">Ajouter votre administration</a></li>
+                  <li><a href="#Ajout_de_codes_Open_Source"> Ajout de codes Open Source</a>
                       <ul>
-                          <li><a href="#Votre administration est déjà là"> Votre administration est déjà là</a></li>
-                          <li><a href="#Votre administration doit être ajouté"> Votre administration doit être ajouté</a>
+                          <li><a href="#Votre_administration_est_deja_la"> Votre administration est déjà là</a></li>
+                          <li><a href="#Votre_administration_doit_etre_ajoute"> Votre administration doit être ajouté</a>
                       </ul>
                   </li>
-                  <li><a href="#Ajout de logiciels Open Source"> Ajout de logiciels Open Source</a>
+                  <li><a href="#Ajout_de_logiciels_Open_Source"> Ajout de logiciels Open Source</a>
                       <ul>
-                          <li><a href="#Le logiciel est déjà là"> Le logiciel est déjà là</a></li>
-                          <li><a href="#Votre logiciel open source doit être ajouté"> Votre logiciel open source doit être ajouté</a>
+                          <li><a href="#Le_logiciel_est_deja_la"> Le logiciel est déjà là</a></li>
+                          <li><a href="#Votre_logiciel_open_source_doit_etre_ajoute"> Votre logiciel open source doit être ajouté</a>
                       </ul>
                   </li>
               </ul>
@@ -45,7 +45,7 @@ permalink: fr/docs.html
     </nav>
   </div>
 
-<h2 id="Structure du répertoire">Structure du répertoire</h2>
+<h2 id="Structure_du_repertoire">Structure du répertoire</h2>
 
    <h3 id="administrations">Administrations</h3> 
     <p>Liste des administrations fédérale, provinciales, territoriales et municipales du Canada. Utilisé pour rechercher les noms bilingues.</p>
@@ -61,8 +61,8 @@ permalink: fr/docs.html
    <h3 id="normes_ouvertes-open_standards">Normes_ouvertes-open_standards</h3> 
     <p>Liste des normes ouvertes approuvées ou utilisées par les administrations.</p>
 
-<h2 id="Comment ajouter vos données">Comment ajouter vos données</h2>
-<h3 id="Ajouter votre administration">Ajouter votre administration</h3>
+<h2 id="Comment_ajouter_vos_donnees">Comment ajouter vos données</h2>
+<h3 id="Ajouter_votre_administration">Ajouter votre administration</h3>
 <p>
     Dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">administrations</a> ajouter votre administration dans le fichier 
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>, 
@@ -70,8 +70,8 @@ permalink: fr/docs.html
     <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a>.
 </p>
 
-<h3 id="Ajout de codes Open Source">Ajout de codes Open Source</h3>
-<h4 id="Votre administration est déjà là">Votre administration est déjà là</h4>
+<h3 id="Ajout_de_codes_Open_Source">Ajout de codes Open Source</h3>
+<h4 id="Votre_administration_est_deja_la">Votre administration est déjà là</h4>
 <p>
     S'il existe déjà un fichier pour votre administration sous le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> vous devez modifier ce fichier pour ajouter votre code source ouvert.
 </p>
@@ -116,15 +116,15 @@ permalink: fr/docs.html
     Si vous êtes intéressé à contribuer avec nous, veuillez remplir <a href="./code-source-ouvert-formulaire.html">le formulaire de code source ouvert</a>.
 </p>
 
-<h4 id="Votre administration doit être ajouté">Votre administration doit être ajouté:</h4>
+<h4 id="Votre_administration_doit_etre_ajoute">Votre administration doit être ajouté:</h4>
 <p>
     Si votre administration n'a pas de fichier sous le répertoire  
     <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> vous devez créer un nouveau fichier pour votre administration.
     Utilisez le <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/code_mandatory.yml">modèle de code avec uniquement les champs obligatoires</a>.
 </p>
 
-<h3 id="Ajout de logiciels Open Source">Ajout de logiciels Open Source</h3>
-<h4 id="Le logiciel est déjà là">Le logiciel est déjà là</h4>
+<h3 id="Ajout_de_logiciels_Open_Source">Ajout de logiciels Open Source</h3>
+<h4 id="Le_logiciel_est_deja_la">Le logiciel est déjà là</h4>
 <p>
     S'il existe déjà un fichier pour le logiciel libre que vous utilisez dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>, 
     vous devez vérifier si votre administration est déjà répertoriée comme utilisant le logiciel libre.
@@ -173,7 +173,7 @@ permalink: fr/docs.html
     Pour plus d'informations, cliquez <a href="./logiciels-libres-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert.
 </p>
 
-<h4 id="Votre logiciel open source doit être ajouté">Votre logiciel open source doit être ajouté</h4>
+<h4 id="Votre_logiciel_open_source_doit_etre_ajoute">Votre logiciel open source doit être ajouté</h4>
 <p>
     Si votre logiciel open source n'a pas de fichier dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>
     vous devez créer un nouveau fichier pour le logiciel open source. Utilisez le modèle <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
